refactor(web): 🎨 add 'link' icon to Button component for enhanced functionality

--- a/packages/website/src/components/Button.astro
+++ b/packages/website/src/components/Button.astro
@@ -12,6 +12,7 @@ const icons = {
   kofi: "ti ti-cup",
   moon: "ti ti-moon-filled",
   apps: "ti ti-apps-filled",
+  link: "ti ti-link",
 };
 
 const { text, href, icon, type = "primary", id } = Astro.props as Props;
