fix(Hero): 🐛 correct typo in the main heading text

--- a/packages/website/src/components/Landing/Hero.astro
+++ b/packages/website/src/components/Landing/Hero.astro
@@ -11,7 +11,7 @@ const { discordBot, kofi } = Astro.props;
   <article>
     <h3>¡ Hola, soy Beatriz Dono!</h3>
     <h1>
-      Una asistente de discord que llevara a tu servidor a la siguiente nivel
+      Una asistente de discord que llevara a tu servidor al siguiente nivel
     </h1>
     <h2>
       Con una gran variedad de funciones para hacer tu servidor más divertido y
