--- a/packages/website/src/components/Landing/Hero.astro
+++ b/packages/website/src/components/Landing/Hero.astro
@@ -1,10 +1,6 @@
 ---
 import Button from "@components/Button.astro";
-interface Props {
-  discordBot: string;
-  kofi: string;
-}
-const { discordBot, kofi } = Astro.props;
+import urls from "@utils/urls";
 ---
 
 <section class="container">
@@ -19,13 +15,13 @@ const { discordBot, kofi } = Astro.props;
     </h2>
     <div class="button-group">
       <Button
-        href={discordBot}
+        href={urls.joinBot}
         type="primary"
         text="Agrega al bot"
         icon="apps"
       />
       <Button
-        href={kofi}
+        href={urls.kofi}
         type="secondary"
         text="Apoya al proyecto"
         icon="kofi"
