--- a/packages/website/src/pages/404.astro
+++ b/packages/website/src/pages/404.astro
@@ -1,11 +1,9 @@
 ---
-import getPublic from "@utils/getPublic";
 import Layout from "../layouts/Layout.astro";
 
 const title = "404 - Page Not Found";
-const pub = getPublic(import.meta.env.PUBLIC_VARIABLES);
 ---
 
-<Layout title={title} pub={pub}>
+<Layout title={title}>
   <h1>404</h1>
 </Layout>
