--- a/packages/website/src/components/Landing/RoadMap.astro
+++ b/packages/website/src/components/Landing/RoadMap.astro
@@ -11,7 +11,7 @@ import Button from "@components/Button.astro";
     para que Beatriz-dono se convierta en <span>tu bot favorito</span>. ¿Quieres
     ver en qué andamos? ¡Échale un vistazo a nuestro mapa de desarrollo!
   </p>
-  <Button href="/about-me/roadmap" type="secondary" icon="link"
+  <Button href="/roadmap" type="secondary" icon="link"
     >Ver Mapa de Desarrollo</Button
   >
 </section>
