--- a/packages/website/src/components/Landing/Modules.astro
+++ b/packages/website/src/components/Landing/Modules.astro
@@ -2,6 +2,7 @@
 import Button from "@components/Button.astro";
 import modules from "./modules";
 import Tag from "@components/Tag.astro";
+import SecondaryButton from "@components/SecondaryButton.astro";
 ---
 
 <section class="container">
@@ -10,31 +11,61 @@ import Tag from "@components/Tag.astro";
     {
       modules.map((mod) => (
         <article class="module">
-          <img src={mod.image} alt={mod.title} />
+          <img src={mod.icon} alt={mod.title} />
           <div class="module-info">
-            <Tag
-              text={mod.status.text}
-              size="0.625rem"
-              color={{
-                background: mod.status.color ?? "secondary",
-                text: "#000",
-              }}
-            />
-            <h3>{mod.title}</h3>
-            <p>{mod.description}</p>
-            <Button
-              text={mod.link.text}
-              href={mod.link.url}
-              icon="link"
-              type="secondary"
-            />
+            <h4 class="module-title">{mod.title}</h4>
+            <div class="module-info--buttons">
+              {mod.features.map((feature, i) => {
+                return (
+                  <SecondaryButton
+                    text={feature.title}
+                    class={`${i === 0 ? "active" : ""}`}
+                    action={{
+                      type: "button",
+                      text: `changeDescription(this,'${feature.description}', '${feature.link.url}', '${feature.link.text}')`,
+                    }}
+                    icon={feature.icon}
+                    small
+                  />
+                );
+              })}
+            </div>
+
+            <div class="module-info--description">
+              <p>{mod.features[0].description ?? "Sin descripción"}</p>
+              <SecondaryButton
+                class=""
+                text={mod.features[0].link.text}
+                action={{
+                  type: "anchor",
+                  text: mod.features[0].link.url,
+                }}
+                icon="link"
+                left
+              />
+            </div>
           </div>
         </article>
       ))
     }
   </section>
 </section>
-
+<script is:inline>
+  function changeDescription(elem, description, url, text) {
+    // delete button active
+    const $buttons = elem.parentElement.querySelectorAll("button");
+    $buttons.forEach((button) => {
+      button.classList.remove("active");
+    });
+    elem.classList.add("active");
+    const $description = document.querySelector(".module-info--description");
+    const $p = $description.querySelector("p");
+    const $button = $description.querySelector("a");
+    $p.innerHTML = description;
+    $button.href = url;
+    $button.innerHTML = text;
+  }
+</script>
 <style lang="scss">
   section {
     display: flex;
@@ -43,43 +74,49 @@ import Tag from "@components/Tag.astro";
     gap: 2rem;
   }
   .modules {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     gap: 1rem;
   }
   .module {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: self-start;
     overflow: hidden;
-    height: 100%;
+    padding: 20px;
+    gap: 20px;
+    width: 100%;
+
     border-radius: var(--border-radius-lg);
-    border: 1px solid var(--font-color-10);
+    border: 1px solid var(--bg-color-10);
 
     img {
-      aspect-ratio: 16 / 9;
-      object-fit: cover;
-      border-radius: var(--border-radius-lg);
-      box-shadow: 0 0 1rem rgba(255, 255, 255, 0.2);
+      aspect-ratio: 1/1;
+      width: 4.25rem;
     }
     .module-info {
       display: flex;
-      padding: 2rem;
-      height: 100%;
       flex-direction: column;
-      align-items: center;
       gap: 1rem;
-      h3 {
-        font-size: 1.25rem;
-        font-weight: var(--semi-bold);
-        width: 100%;
-        text-align: center;
+      &--status {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
       }
-      p {
-        font-size: 1rem;
-        width: 100%;
-        height: 100%;
-        text-wrap: balance;
-        text-align: center;
+      &--buttons {
+        grid-column: 1 / 3;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--bg-color-10);
+      }
+      &--description {
+        grid-column: 1 / 3;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1rem;
       }
     }
   }
