--- a/packages/website/src/components/Landing/Modules.astro
+++ b/packages/website/src/components/Landing/Modules.astro
@@ -75,11 +75,12 @@ import SecondaryButton from "@components/SecondaryButton.astro";
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     gap: 2rem;
   }
   .modules {
     display: flex;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    width: 100%;
     gap: 1rem;
   }
   .module {
@@ -90,7 +91,6 @@ import SecondaryButton from "@components/SecondaryButton.astro";
     padding: 20px;
     gap: 20px;
     width: 100%;
-
     border-radius: var(--border-radius-lg);
     border: 1px solid var(--bg-color-10);
 
