--- a/packages/website/src/components/Nav/LinkDonate.astro
+++ b/packages/website/src/components/Nav/LinkDonate.astro
@@ -1,10 +1,10 @@
 ---
-import Button from "@components/Button.astro";
+import Button from '@components/Button.astro'
 
 interface Props {
-  kofi: string;
+  kofi: string
 }
-const { kofi } = Astro.props;
+const { kofi } = Astro.props
 ---
 
 <Button href={kofi} type="only-icon">
