--- a/packages/website/src/pages/dashboard/guild.astro
+++ b/packages/website/src/pages/dashboard/guild.astro
@@ -1,8 +1,8 @@
 ---
-import urls from "@utils/urls";
-import Settings from "../../components/Dashboard/Guild/Settings";
+import urls from '@utils/urls'
+import Settings from '../../components/Dashboard/Guild/Settings'
 
-import Layout from "../../layouts/Layout.astro";
+import Layout from '../../layouts/Layout.astro'
 ---
 
 <Layout title="Guild Management">
