--- a/packages/website/src/pages/dashboard/index.astro
+++ b/packages/website/src/pages/dashboard/index.astro
@@ -1,7 +1,7 @@
 ---
-import urls from "@utils/urls";
-import ContainerGuilds from "../../components/Dashboard/ContainerGuilds";
-import Layout from "../../layouts/Layout.astro";
+import urls from '@utils/urls'
+import ContainerGuilds from '../../components/Dashboard/ContainerGuilds'
+import Layout from '../../layouts/Layout.astro'
 ---
 
 <Layout title="Dashboard">
