--- a/packages/website/src/pages/index.astro
+++ b/packages/website/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Hero from "../components/Landing/Hero.astro";
-import RoadMap from "../components/Landing/RoadMap.astro";
-import Layout from "../layouts/Layout.astro";
-import Modules from "@components/Landing/Modules.astro";
+import Modules from '@components/Landing/Modules.astro'
+import Hero from '../components/Landing/Hero.astro'
+import RoadMap from '../components/Landing/RoadMap.astro'
+import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="Welcome to Beatriz Dono">
