--- a/packages/website/src/pages/utils/image.astro
+++ b/packages/website/src/pages/utils/image.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@layouts/Layout.astro";
-import RenderImageCanvas from "@components/Images/RenderImageCanvas";
+import RenderImageCanvas from '@components/Images/RenderImageCanvas'
+import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout title="Image">
