--- a/packages/website/src/components/Landing/Hero.astro
+++ b/packages/website/src/components/Landing/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import Button from "@components/Button.astro";
-import urls from "@utils/urls";
+import Button from '@components/Button.astro'
+import urls from '@utils/urls'
 ---
 
 <section class="container">
