--- a/packages/website/src/components/Landing/Modules.astro
+++ b/packages/website/src/components/Landing/Modules.astro
@@ -1,8 +1,8 @@
 ---
-import Button from "@components/Button.astro";
-import modules from "./modules";
-import Tag from "@components/Tag.astro";
-import SecondaryButton from "@components/SecondaryButton.astro";
+import Button from '@components/Button.astro'
+import SecondaryButton from '@components/SecondaryButton.astro'
+import Tag from '@components/Tag.astro'
+import modules from './modules'
 ---
 
 <section class="container">
