--- a/packages/website/src/components/SecondaryButton.astro
+++ b/packages/website/src/components/SecondaryButton.astro
@@ -1,30 +1,22 @@
 ---
-import type { ButtonProps } from "../types";
-import { icons } from "@utils/icons";
-import DecoreText from "./DecoreText.astro";
+import { icons } from '@utils/icons'
+import type { ButtonProps } from '../types'
+import DecoreText from './DecoreText.astro'
 
 interface Props extends ButtonProps {
-  class?: string;
+  class?: string
 }
-const {
-  text,
-  action,
-  icon,
-  id,
-  small = false,
-  left = false,
-  class: className,
-} = Astro.props as Props;
+const { text, action, icon, id, small = false, left = false, class: className } = Astro.props as Props
 
-const TagHtml = action.type === "anchor" ? "a" : "button";
+const TagHtml = action.type === 'anchor' ? 'a' : 'button'
 
-const customProps: Record<string, any> = {};
-if (action.type === "anchor") {
-  customProps.href = action.text;
-  customProps.target = "_blank";
-  customProps.rel = "noopener noreferrer";
+const customProps: Record<string, any> = {}
+if (action.type === 'anchor') {
+  customProps.href = action.text
+  customProps.target = '_blank'
+  customProps.rel = 'noopener noreferrer'
 } else {
-  customProps.onclick = action.text;
+  customProps.onclick = action.text
 }
 ---
 
