--- a/packages/website/src/pages/dashboard/guild/colors.astro
+++ b/packages/website/src/pages/dashboard/guild/colors.astro
@@ -1,7 +1,7 @@
 ---
-import ColorsSettings from "@components/Dashboard/Guild/ColorsSettings";
-import Layout from "@layouts/Layout.astro";
-import urls from "@utils/urls";
+import ColorsSettings from '@components/Dashboard/Guild/ColorsSettings'
+import Layout from '@layouts/Layout.astro'
+import urls from '@utils/urls'
 ---
 
 <Layout title="Colors">
